# grakn-haskell

./: .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.yml  README.md  arcsTemplate.gql  grakn.cabal  graql.cabal  schema.gql  stack.yaml  verticesTemplate.gql
features/: ClientSpec.hs  Env.hs  GraqlQuerySpec.hs  Main.hs
src/: Codenames.hs  Grakn.hs  Graql.hs
src/Grakn/: Client.hs  Pattern.hs  Property.hs  Query.hs  Util.hs
src/Graql/: Client.hs  Pattern.hs  Property.hs  Query.hs  Shell.hs  Util.hs
test/: GraknSpec.hs  GraqlSpec.hs  Main.hs  main.hs
test/Grakn/: ClientSpec.hs
test/Graql/: ClientSpec.hs
test/Steps/: ClientSpec.hs  GraqlQuerySpec.hs
