name:                 graql
version:              0.1.0.0
synopsis:             Execute Graql queries on a Grakn graph
-- description:
-- license:
-- license-file:
homepage:             
author:               Felix Chapman
maintainer:           felix@grakn.ai
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  build-depends:        base       >= 4.7 && < 5
                      , containers == 0.5.*
                      , process    == 1.4.*
                      , aeson      == 1.0.*
                      , scientific == 0.3.*
                      , text       == 1.2.*
                      , regex-posix
  hs-source-dirs:       src
  exposed-modules:      Graql
                      , Graql.Shell
  other-modules:        Graql.Util
                      , Graql.Query
                      , Graql.Pattern
                      , Graql.Property
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings

test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              main.hs
  hs-source-dirs:       test
  build-depends:        base       >= 4.7 && < 5
                      , graql
                      , hspec
                      , text
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
