name:                 graql
version:              0.1.1
synopsis:             Execute Graql queries on a Grakn graph
description:          A library for building and executing Graql queries on a
                      Grakn knowledge graph.
license:              Apache-2.0
license-file:         LICENSE
homepage:             https://github.com/graknlabs/graql-haskell
author:               Felix Chapman
maintainer:           felix@grakn.ai
category:             Database,Graphs
build-type:           Simple
extra-source-files:   test/Example.lhs
cabal-version:        >=1.10

library
  build-depends:        base        >= 4.7 && < 5
                      , containers  == 0.5.*
                      , process     == 1.4.*
                      , aeson       == 1.0.*
                      , scientific  == 0.3.*
                      , text        == 1.2.*
                      , regex-posix == 0.95.*
                      , servant     == 0.10.*
                      , servant-client
                      , http-client
                      , mtl
                      , http-media
  hs-source-dirs:       src
  exposed-modules:      Graql
  other-modules:        Graql.Util
                      , Graql.Query
                      , Graql.Pattern
                      , Graql.Property
                      , Graql.Client
  default-language:     Haskell2010

  default-extensions:   MultiParamTypeClasses
                      , FlexibleInstances
                      , FlexibleContexts
                      , DataKinds
                      , TypeOperators

test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       test,src
  build-depends:        base       >= 4.7 && < 5
                      , graql
                      , containers  == 0.5.*
                      , process     == 1.4.*
                      , aeson       == 1.0.*
                      , scientific  == 0.3.*
                      , text        == 1.2.*
                      , regex-posix == 0.95.*
                      , servant     == 0.10.*
                      , servant-client
                      , http-client
                      , mtl
                      , http-media
                      , hspec
                      , QuickCheck >= 2.8
                      , markdown-unlit
                      , MissingH
  other-modules:        Example
  default-language:     Haskell2010
  ghc-options:          -pgmL markdown-unlit
  default-extensions:   MultiParamTypeClasses
                      , FlexibleInstances
                      , FlexibleContexts
                      , DataKinds
                      , TypeOperators

test-suite accept
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       features,src
  build-depends:        base       >= 4.7 && < 5
                      , graql
                      , containers  == 0.5.*
                      , process     == 1.4.*
                      , aeson       == 1.0.*
                      , scientific  == 0.3.*
                      , text        == 1.2.*
                      , regex-posix == 0.95.*
                      , servant     == 0.10.*
                      , servant-client
                      , http-client
                      , mtl
                      , http-media
                      , hspec
                      , markdown-unlit
                      , MissingH
  default-language:     Haskell2010
  default-extensions:   MultiParamTypeClasses
                      , FlexibleInstances
                      , FlexibleContexts
                      , DataKinds
                      , TypeOperators
